# iimono-atsume

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-collection.yml  deploy-site.yml
config/: interests.yaml  sources.yaml
data/: index.json  preference_profile.json
data/daily/: 2026-07-21.json  2026-07-22.json
data/items/: instagram_2143fda3b2df2c92.json  raindrop_1797895924.json  raindrop_1797895925.json  raindrop_1797895926.json  raindrop_1797895927.json  raindrop_1797895928.json  raindrop_1797895929.json  raindrop_1797895930.json  raindrop_1797895931.json  x_4fcff65e48f56d45.json  x_6b156855b5c8cb82.json  x_78b2a5538975504d.json
favorite-api/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
favorite-api/src/: auth.ts  discord.ts  index.ts  storage.ts  validation.ts
favorite-api/tests/: validation.test.ts
reports/: 2026-07-21.md  2026-07-22-raindrop-real.md  2026-07-22.md
site/templates/: base.html  daily.html  favorites.html  index.html
src/: __init__.py  cli.py  config.py  types.py  utils.py
src/collectors/: base.py  instagram_collector.py  web_collector.py  x_collector.py
src/favorites/: __init__.py  client.py  feedback.py  models.py
src/jobs/: daily_job.py
src/notifications/: base.py  discord.py
src/preference/: __init__.py  embeddings.py  feedback.py  profiler.py
src/raindrop/: __init__.py  bookmarks.py  client.py  collections.py
src/recommendation/: __init__.py  classifier.py  deduplicator.py  diversity.py  scorer.py
src/reporting/: markdown_report.py
tests/: test_pipeline.py
(+13 files in other folders)
