[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iimono-atsume"
version = "0.1.0"
description = "Daily Raindrop.io preference analysis and recommendation pipeline"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "SQLAlchemy>=2.0",
  "pytest>=8.0",
  "APScheduler>=3.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["src*"]
